--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -511,7 +511,7 @@
 "kGuessDraw" = "Guessing";
 
 "kQuit" = "Quit";
-"kOneMore" = "One More";
+"kOneMore" = "More";
 
 "kGuessUserDraw" = "%@'s draw";
 
