--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -665,3 +665,19 @@
 
 "kThrowFlower" = "Flower";
 "kThrowTomato" = "Tomato";
+
+"kFlower" = "Flower";
+"kTomato" = "Tomato";
+"kRemoveAd" = "No Ad!";
+"kTips" = "Tips";
+"kPen" = "Brush Pen";
+"kIcePen" = "Ice-cream Pen";
+"kQuill" = "Quill Pen";
+
+"kFlowerDescription" = "Whenever you see awesome draws, send some flowers to the author!";
+"kTomatoDescription" = "Whenever you see bad draws, throw some tomatoes to the author!";
+"kRemoveAdDescription" = "Buy it and remove all the advertisements!";
+"kTipsDescription" = "Boom away some characters and make it easier for you to guess.";
+"kBrushPenDescription" = "Just look cool...";
+"kIcePenDescription" = "Just look cool...";
+"kQuillDescription" = "Just look cool...";   
