--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -125,8 +125,8 @@
 
 "kChangeRoom" = "Loading...";
 
-"kNoTipsItemTitle" = "Message";
-"kNoTipsItemMessage" = "You don't have any tip now. Do you want to buy some?";
+"kNoItemTitle" = "Message";
+"kNoItemMessage" = "You have no the tool now. Do you want to buy some?";
 "kQuickMessage" = "Hurry Up!";
 "kWaitMessage" = "Wait a minute!";
 "kClickTooFast" = "Your click rate is too high, please take a break.";
@@ -665,6 +665,7 @@
 
 "kThrowFlower" = "Flower";
 "kThrowTomato" = "Tomato";
+"kBombTips" = "Bomb";
 
 "kFlower" = "Flower";
 "kTomato" = "Tomato";
@@ -681,3 +682,6 @@
 "kBrushPenDescription" = "Just look cool...";
 "kIcePenDescription" = "Just look cool...";
 "kQuillDescription" = "Just look cool...";   
+
+
+"kPickToolTitle" = "Use Item";
