--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -124,8 +124,8 @@
 "kJoinGameFailure" = "加入游戏失败，请稍候再试";
 
 "kChangeRoom" = "更换房间中...";
-"kNoTipsItemTitle" = "消息";
-"kNoTipsItemMessage" = "你的道具不够了，是不是现在购买一些？";
+"kNoItemTitle" = "消息";
+"kNoItemMessage" = "你的道具不够了，是不是现在购买一些？";
 "kQuickMessage" = "快点,快点啦!";
 "kWaitMessage" = "等等,等等吧!";
 "kClickTooFast" = "你的点击频率太快了，不妨休息一下。";
@@ -668,6 +668,7 @@
 
 "kThrowFlower" = "送鲜花";
 "kThrowTomato" = "丢番茄";
+"kBombTips" = "炸词锦囊";
 
 "kFlower" = "鲜花          朵";
 "kTomato" = "番茄          个";
@@ -684,3 +685,5 @@
 "kBrushPenDescription" = "好多毛的笔";
 "kIcePenDescription" = "看上去像雪糕的笔";
 "kQuillDescription" = "用鹅毛做的笔";  
+
+"kPickToolTitle" = "使用道具";
