--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -667,6 +667,7 @@
 "kPen" = "毛筆          隻";
 "kIcePen" = "雪糕筆          隻";
 "kQuill" = "鵝毛筆          隻";
+"kWaterPen" = "水筆          隻";
 
 "kFlowerDescription" = "看到好的作品就送些鮮花吧！贈人玫瑰，手有餘香。";
 "kTomatoDescription" = "看到垃圾作品就狠狠地丟些番茄吧，還能讓作者扣分扣經驗哦。";
@@ -675,8 +676,10 @@
 "kBrushPenDescription" = "好多毛的筆";
 "kIcePenDescription" = "看上去像雪糕的筆";
 "kQuillDescription" = "用鵝毛做的筆";
+"kWaterPenDescription" = "好多水的筆";
 
 "kPickToolTitle" = "使用道具";
 
 "kPrice" = "價格";
+"kCost" = "花費";
 "kCoins" = "金幣";
