--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -677,6 +677,7 @@
 "kPen" = "毛笔          支";
 "kIcePen" = "雪糕笔          支";
 "kQuill" = "鹅毛笔          支";
+"kWaterPen" = "水笔          支";
 
 "kFlowerDescription" = "看到好的作品就送些鲜花吧！赠人玫瑰，手有余香。";
 "kTomatoDescription" = "看到垃圾作品就狠狠地丢些番茄吧，还能让作者扣分扣经验哦。";
@@ -685,8 +686,10 @@
 "kBrushPenDescription" = "好多毛的笔";
 "kIcePenDescription" = "看上去像雪糕的笔";
 "kQuillDescription" = "用鹅毛做的笔";  
+"kWaterPenDescription" = "好多水的笔";
 
 "kPickToolTitle" = "使用道具";
 
 "kPrice" = "价格";
+"kCost" = "花费";
 "kCoins" = "金币";
