--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -670,14 +670,14 @@
 "kThrowTomato" = "丢番茄";
 "kBombTips" = "炸词锦囊";
 
-"kFlower" = "鲜花          朵";
-"kTomato" = "番茄          个";
+"kFlower" = "鲜花";
+"kTomato" = "番茄";
 "kRemoveAd" = "移除广告";
-"kTips" = "锦囊          个";
-"kPen" = "毛笔          支";
-"kIcePen" = "雪糕笔          支";
-"kQuill" = "鹅毛笔          支";
-"kWaterPen" = "水笔          支";
+"kTips" = "锦囊";
+"kPen" = "毛笔";
+"kIcePen" = "雪糕笔";
+"kQuill" = "鹅毛笔";
+"kWaterPen" = "水笔";
 
 "kFlowerDescription" = "看到好的作品就送些鲜花吧！赠人玫瑰，手有余香。";
 "kTomatoDescription" = "看到垃圾作品就狠狠地丢些番茄吧，还能让作者扣分扣经验哦。";
