--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -693,3 +693,8 @@
 "kPrice" = "价格";
 "kCost" = "花费";
 "kCoins" = "金币";
+
+"kThrowTomatoMessage" = "你给作者扔个个番茄，把TA的经验值扔掉了%d点, 把TA的金币扔掉了%d个";
+"kSendFlowerMessage" = "你给作者送了朵鲜花，TA的经验值额外增加了%d点，TA的金币额外增加了%d个";
+"kReceiveTomatoMessage" = "愤怒的观众朝你扔了个番茄，你的经验值减了%d点，金币扣了%d个";
+"kReceiveFlowerMessage" = "疯狂的粉丝给你送了朵鲜花，你的经验值额外增加%d点，金币额外增加%d个";
