--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -684,7 +684,7 @@
 "kCost" = "花費";
 "kCoins" = "金幣";
 
-"kThrowTomatoMessage" = "你給作者扔個個番茄，把TA的經驗值扔掉了%d點, 把TA的金幣扔掉了%d個";
-"kSendFlowerMessage" = "你給作者送了朵鮮花，TA的經驗值額外增加了%d點，TA的金幣額外增加了%d個";
-"kReceiveTomatoMessage" = "憤怒的觀眾朝你扔了個番茄，你的經驗值減了%d點，金幣扣了%d個";
-"kReceiveFlowerMessage" = "瘋狂的粉絲給你送了朵鮮花，你的經驗值額外增加%d點，金幣額外增加%d個";
+"kThrowTomatoMessage" = "你給作者扔了個番茄，讓TA扣了%d點經驗, %d個金幣";
+"kSendFlowerMessage" = "你給作者送了朵鮮花，讓TA額外增加了%d點經驗，%d個金幣";
+"kReceiveTomatoMessage" = "憤怒的觀眾朝你扔了個番茄，你被扣了%d點經驗，%d個金幣";
+"kReceiveFlowerMessage" = "瘋狂的粉絲給你送了朵鮮花，你額外得到%d點經驗，%d個金幣";
