--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -698,3 +698,6 @@
 "kSendFlowerMessage" = "你给作者送了朵鲜花，让TA额外增加了%d点经验，%d个金币";
 "kReceiveTomatoMessage" = "愤怒的观众朝你扔了个番茄，你被扣了%d点经验，%d个金币";
 "kReceiveFlowerMessage" = "疯狂的粉丝给你送了朵鲜花，你额外得到%d点经验，%d个金币";
+
+"kCoinsForShareToFriends" = "+%d金币";
+"kGetCoinsByShareToFriends" = "分享微博成功，获得了%d个金币!";
