--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -702,3 +702,5 @@
 
 "kSendAFlower" = "Send a flower to painter!";
 "kThrowATomato" = "Throw a tomato to painter!";
+
+"kShareAwardCoinTips" = "Share you draws to SNS and get %d reward coins!";
