--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -703,4 +703,4 @@
 "kSendAFlower" = "Send a flower to painter!";
 "kThrowATomato" = "Throw a tomato to painter!";
 
-"kShareAwardCoinTips" = "Share you draws to SNS and get %d reward coins!";
+"kShareAwardCoinTips" = "Share these draws to SNS and get %d reward coins!";
