--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -705,4 +705,4 @@
 "kSendAFlower" = "给作者赠送了一朵鲜花!";
 "kThrowATomato" = "向作者丢了个番茄!";
 
-"kShareAwardCoinTips" = "分享你的作品可获%d金币!";
+"kShareAwardCoinTips" = "分享作品可获%d金币!";
