--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -616,7 +616,7 @@
 "kInputEmail" = "请输入电子邮件地址";
 "kUserBindSucc" = "成功绑定了用户帐号";
 "kUserBindFail" = "绑定用户帐号失败，请检查网络是否可用，稍候再试，或者联系我们的技术支持";
-"kWeiboExpired" = "微博授权已过期";
+"kWeiboExpired" = "授权已过期";
 "kSaveAndShare" = "保存分享";
 
 "kRebindQQ" = "你已经绑定过腾讯微博了，是否要重新尝试绑定？";
