finish recommend UI

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -706,3 +706,16 @@
 "kShareAwardCoinTips" = "Share these draws to SNS and get %d reward coins!";
 
 "kQueryingDrawer" = "Querying painter info";
+
+"kGhostGame" = "GhostGame";
+"kGhostGameDescription" = "...";
+"kShuriken" = "Shuriken";
+"kShurikenDescription" = "shiu~shiu~shiu~";
+"kCountBean" = "Count Bean";
+"kCountBeanDescription" = "";
+"kCrazyFinger" = "Crazy Finger";
+"kCrazyFingerDescription" = "";
+"kGroupBuy" = "Groupbuy";
+"kGroupBuyDescription" = "";
+
+"kRecommendApps" = "App Recommend";
