--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -699,3 +699,16 @@
 "kShareAwardCoinTips" = "分享作品可獲%d金幣!";
 
 "kQueryingDrawer" = "查詢作者信息中...";
+
+"kGhostGame" = "捉鬼遊戲";
+"kGhostGameDescription" = "iPhone熱門桌遊,捉鬼遊戲,現正50%折扣促銷,僅售12元人民幣,還不到一個麥當勞漢堡包的價格啊,比實體桌遊牌便宜30元,趕快來和朋友一起玩捉鬼遊戲吧!";
+"kShuriken" = "鏢漢-你射我擋";
+"kShurikenDescription" = "「鏢漢之你射我擋」遊戲新上線,5折促銷中,僅限兩天,馬上下載試用吧!";
+"kCountBean" = "數豆達人";
+"kCountBeanDescription" = "挑戰自己的記憶極限,做數豆達人吧!";
+"kCrazyFinger" = "瘋狂的手指";
+"kCrazyFingerDescription" = "這是一款益智休閒小遊戲:根據掉下來的物品做相應的手勢,如果物品消失了還沒做出相應手勢就算失誤,出現三個失誤就輸掉了。";
+"kGroupBuy" = "甘橙團購";
+"kGroupBuyDescription" = "甘橙團購是一款團購導航和推薦應用,幫你快速找到你想要的團購商品!";
+
+"kRecommendApps" = "精彩應用推薦";
