--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -708,3 +708,15 @@
 "kShareAwardCoinTips" = "分享作品可获%d金币!";
 
 "kQueryingDrawer" = "查询作者信息中...";
+
+"kGhostGame" = "捉鬼游戏";
+"kGhostGameDescription" = "iPhone热门桌游,捉鬼游戏,现正50%折扣促销,仅售12元人民币,还不到一个麦当劳汉堡包的价格啊,比实体桌游牌便宜30元,赶快来和朋友一起玩捉鬼游戏吧!";
+"kShuriken" = "镖汉-你射我挡";
+"kShurikenDescription" = "「镖汉之你射我挡」游戏新上线,5折促销中,仅限两天,马上下载试用吧!";
+"kCountBean" = "数豆达人";
+"kCountBeanDescription" = "挑战自己的记忆极限,做数豆达人吧!";
+"kCrazyFinger" = "疯狂的手指";
+"kCrazyFingerDescription" = "这是一款益智休闲小游戏:根据掉下来的物品做相应的手势,如果物品消失了还没做出相应手势就算失误,出现三个失误就输掉了。";
+"kGroupBuy" = "甘橙团购";
+"kGroupBuyDescription" = "甘橙团购是一款团购导航和推荐应用,帮你快速找到你想要的团购商品!";
+"kRecommendApps" = "精彩应用推荐";
