--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -720,3 +720,4 @@
 "kGroupBuy" = "甘橙团购";
 "kGroupBuyDescription" = "甘橙团购是一款团购导航和推荐应用,帮你快速找到你想要的团购商品!";
 "kRecommendApps" = "精彩应用推荐";
+"kRecommend" = "荐";
