improve chat strings

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -362,7 +362,7 @@
 "kPayAttentionToMe" = "Follow me";
 "kDrawTillDawn" = "Awesome";
 "kHelloEveryone" = "Hello";
-"kDontLeave" = "Hi All";
+"kDontLeave" = "So smart";
 "kFunny" = "Funny";
 "kDrawedWhat" = "What ?!";
 "kHardToGuess" = "Unbelivable";
