--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -373,15 +373,15 @@
 
 
 "kPayAttentionToMe" = "关注我吧";
-"kDrawTillDawn" = "决战到天明";
+"kDrawTillDawn" = "我好聪明吧";
 "kHelloEveryone" = "Hi,大家好";
-"kDontLeave" = "别走啊";
-"kFunny" = "真有趣";
+"kDontLeave" = "你真聪明";
+"kFunny" = "画的好烂";
 "kDrawedWhat" = "画神马啊";
-"kHardToGuess" = "好难猜";
+"kHardToGuess" = "画的不错";
 "kSelfDefine" = "+";
-"kDontWriteAnswer" = "别给答案啊" ;
-"kGiveAPrompt" = "给点提示吧";
+"kDontWriteAnswer" = "我是大画家" ;
+"kGiveAPrompt" = "画的传神吧";
 "kWellDone" = "画的真好";
 
 "kFollowMe" = "关注";
