--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -370,15 +370,15 @@
 
 
 "kPayAttentionToMe" = "關注我吧";
-"kDrawTillDawn" = "決戰到天明";
+"kDrawTillDawn" = "我好聰明吧";
 "kHelloEveryone" = "Hi,大家好";
-"kDontLeave" = "別走啊";
-"kFunny" = "真有趣";
+"kDontLeave" = "你真聰明";
+"kFunny" = "畫的好爛";
 "kDrawedWhat" = "畫神馬啊";
-"kHardToGuess" = "好難猜";
+"kHardToGuess" = "畫的不錯";
 "kSelfDefine" = "+";
-"kDontWriteAnswer" = "別給答案啊" ;
-"kGiveAPrompt" = "給點提示吧";
+"kDontWriteAnswer" = "我是大畫家" ;
+"kGiveAPrompt" = "畫的傳神吧";
 "kWellDone" = "畫的真好";
 
 "kFollowMe" = "關注";
