--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -713,3 +713,6 @@
 
 "kRecommendApps" = "精彩應用推薦";
 "kRecommend" = "薦";
+
+"kChangeBackgroundTitle" = "改變背景顏色";
+"kChangeBackgroundMessage" = "改變背景顏色將會導致之前所畫的東西都消失，確定要這樣做嗎？";
