--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -724,3 +724,5 @@
 
 "kChangeBackgroundTitle" = "改变背景颜色";
 "kChangeBackgroundMessage" = "改变背景颜色将会导致之前所画的东西都消失，确定要这样做吗？";
+
+"kBuySuccess" = "购买成功";
