--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -716,3 +716,5 @@
 
 "kChangeBackgroundTitle" = "改變背景顏色";
 "kChangeBackgroundMessage" = "改變背景顏色將會導致之前所畫的東西都消失，確定要這樣做嗎？";
+
+"kBuySuccess" = "購買成功";
