--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -725,3 +725,5 @@
 "kChangeBackgroundMessage" = "Change background? All the paints will dismiss.";
 
 "kBuySuccess" = "Buy item successfully!";
+
+"kNotEnoughCoin" = "You don't have enough coin";
