--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -722,3 +722,9 @@
 "kNotEnoughCoin" = "金幣不足";
 
 "kParsingData" = "解析數據中...";
+
+// Dice game
+
+"kOpenDice" = "開";
+"kScrambleToOpenDice" = "搶";
+
