--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -589,7 +589,7 @@
 "kGuessWords" = "猜畫的是: %@";
 "kMyDrawing" = "我的[%@]";
 "kDrawToHim" = "畫幅畫給TA";
-"kExploreHim" = "TA的動態";
+"kExploreHim" = "TA的作品";
 "kPlayWithHim" = "和TA一起玩猜猜畫畫";
 "kChatToHim" = "搭個訕";
 
@@ -597,6 +597,8 @@
 
 
 "kUserFeedTitle" = "%@的動態";
+"kUserFeed" = "動態";
+"kUserOpus" = "作品";
 
 // For Weibo Settings
 "kSetEmail" = "電子郵件";
