--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -526,7 +526,7 @@
 "kGuessUserDraw" = "正在猜%@的画";
 
 "kFeedTitle" = "猜画动态";
-"kAllFeed" = "全部";
+"kAllFeed" = "关注";
 "kHotFeed" = "热榜";
 "kMyFeed" = "我的";
 "kMyFeedList" = "我的动态";
@@ -742,3 +742,6 @@
 "kScrambleToOpenDice" = "抢开";
 
 "kLatestFeed" = "最新";
+
+"kShareToWeiXinTitle" = "分享到微信";
+"kWXShareImageName" = "猜猜画画美图";
