update replay view controller. add play to end button.

--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -744,3 +744,7 @@
 
 "kShareToWeiXinTitle" = "Share to WeiXin";
 "kWXShareImageName" = "Drawlively Image";
+
+"kFeedbackTips" = "Welcome to join QQ group: 228119679, and follow the official Weibo @猜猜画画手机版";
+
+"kPlayEnd" = "End";
