--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -733,3 +733,6 @@
 
 "kShareToWeiXinTitle" = "分享到微信";
 "kWXShareImageName" = "猜猜畫畫美圖";
+
+"kFeedbackTips" = "歡迎加入猜猜畫畫玩家QQ群:228119679, 和關注官方微博@猜猜畫畫手機版";
+"kPlayEnd" = "結束播放";
