--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -745,3 +745,7 @@
 
 "kShareToWeiXinTitle" = "分享到微信";
 "kWXShareImageName" = "猜猜画画美图";
+
+"kFeedbackTips" = "欢迎加入猜猜画画玩家QQ群:228119679, 和关注官方微博 @猜猜画画手机版";
+
+"kPlayEnd" = "结束播放";
