--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -545,6 +545,10 @@
 
 "kNoGuess" = "没有人猜";
 
+//"kGuessDetailStat" = "猜过:%d | 猜对:%d | 评论:%d | 鲜花:%d | 番茄:%d | 保存:%d";
+
+"kGuessDetailStat" = "猜过:%d | 猜对:%d | 鲜花:%d | 番茄:%d";
+
 "kGuessStat" = "%d人猜过，%d人猜中";
 "kGetFeedListFail" = "获取动态列表失败，请稍后再试。";
 "kNoFeedTips" = "暂时没有相关动态";
@@ -736,13 +740,6 @@
 
 "kParsingData" = "解析数据中...";
 
-// Dice game
-
-"kOpenDice" = "开";
-"kScrambleToOpenDice" = "抢开";
-
-"kLatestFeed" = "最新";
-
 "kShareToWeiXinTitle" = "分享到微信";
 "kWXShareImageName" = "猜猜画画美图";
 
@@ -752,3 +749,13 @@
 
 "kCommitOpusTitle" = "提交作品";
 "kCommitOpusMessage" = "你确定要提交作品吗？";
+
+"kLatestFeed" = "最新";
+
+// Dice game
+
+"kOpenDice" = "开";
+"kScrambleToOpenDice" = "抢开";
+
+
+
