--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -9,6 +9,8 @@
  
  */
 
+/*********************** 猜猜画画国际化字符串开始 *************************/
+
 "kStart" = "在线猜画";
 
 "kShop" = "商店";
@@ -736,12 +738,31 @@
 
 "kParsingData" = "解析数据中...";
 
-// Dice game
-
-"kOpenDice" = "开";
-"kScrambleToOpenDice" = "抢开";
 
 "kLatestFeed" = "最新";
 
 "kShareToWeiXinTitle" = "分享到微信";
 "kWXShareImageName" = "猜猜画画美图";
+
+
+/*********************** 猜猜画画国际化字符串结束 *************************/
+
+
+
+
+
+
+
+
+/*********************** 大话骰子国际化字符串开始 *************************/
+
+"kOpenDice" = "开";
+"kScrambleToOpenDice" = "抢开";
+"kWaittingForNextTurn" = "等待下一轮...";
+
+
+
+
+
+/*********************** 大话骰子国际化字符串结束 *************************/
+
