--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -777,6 +777,7 @@
 "kOpenDice" = "开";
 "kScrambleToOpenDice" = "抢开";
 "kWaittingForNextTurn" = "等待下轮...";
+"kGameBegin" = "游戏开始了...";
 
 
 /*********************** 大话骰子国际化字符串结束 *************************/
