--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -767,6 +767,8 @@
 
 "kWaittingForNextTurn" = "Watting...";
 "kGameBegin" = "Game begin...";
+"kNearBy" = "NearBy";
+"kWhoseRoom" = "%@'s room";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
