--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -761,7 +761,8 @@
 "kScrambleToOpenDice" = "搶開";
 "kWaittingForNextTurn" = "等待下輪...";
 "kGameBegin" = "遊戲開始了...";
-
+"kNearBy" = "附近";
+"kWhoseRoom" = "%@ 的房間";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
