--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -275,7 +275,8 @@
 
 "kNoDrawings" = "No Drawing";
 "kAll" = "  All";
-"kMine" = "Mine  ";
+"kMine" = "Mine";
+"kDraft" = "Draft";
 "kNone" = "None";
 "kGifNotice" = "The size of GIF is %.2fMB,it may cost some time for publishing";
 "kGifTips" = "Tips";
@@ -751,6 +752,8 @@
 
 "kCommitOpusTitle"  = "Submit drawing";
 "kCommitOpusMessage"  = "Are you sure to submit the drawing?";
+
+
 
 /*********************** 猜猜画画国际化字符串结束 *************************/
 
