--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -293,7 +293,11 @@
 
 "kContentRepeat" = "不要重复提交哦!";
 
+
+
 /*the new words below without Japanese*/
+
+"kSaveSucc" = "保存成功！在作品页面可以查看以往保存的草稿。";
 
 "kNetworkErrorTitle" = "网络连接失效";
 "kNetworkErrorMessage" = "无法访问互联网，请检查手机是否正确连接到网络或者WIFI。";
