--- a/Draw/zh-Hant.lproj/Localizable.strings
+++ b/Draw/zh-Hant.lproj/Localizable.strings
@@ -766,6 +766,8 @@
 "kGameBegin" = "遊戲開始了...";
 "kNearBy" = "附近";
 "kWhoseRoom" = "%@ 的房間";
+"kMoreRoom" = "更多...";
+"kMoreRoomLoading" = "加載中...";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
