--- a/Draw/zh-Hans.lproj/Localizable.strings
+++ b/Draw/zh-Hans.lproj/Localizable.strings
@@ -785,6 +785,8 @@
 "kGameBegin" = "游戏开始了...";
 "kNearBy" = "附近";
 "kWhoseRoom" = "%@ 的房间";
+"kRollAgain" = "摇";
+"kCut" = "劈";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
