--- a/Draw/en.lproj/Localizable.strings
+++ b/Draw/en.lproj/Localizable.strings
@@ -771,6 +771,8 @@
 "kGameBegin" = "Game begin...";
 "kNearBy" = "NearBy";
 "kWhoseRoom" = "%@'s room";
+"kRollAgain" = "reroll";
+"kCut" = "cut";
 
 /*********************** 大话骰子国际化字符串结束 *************************/
 
